Implement basic update loop

--- a/index.html
+++ b/index.html
@@ -2,14 +2,21 @@
 <html>
 	<head>
 		<title>Circuitry</title>
+		<meta charset = "utf8">
+
 		<link rel = "stylesheet" type = "text/css" href = "index.css"/>
 
 		<script src = "js/lib/jquery-2.1.4.min.js"></script>
+		<script src = "js/lib/pixi.min.js"></script>
+
+		<script src = "circuitry/js/circuitry.utilities.js"></script>
+		<script src = "circuitry/js/circuitry.js"></script>
+
 		<script src = "index.js"></script>
 	</head>
 	<body>
 		<div id = "wrapper">
-			<div id = "wrapper_inner">
+			<div id = "circ_container">
 
 			</div>
 		</div>
