Implement basic grid and figure selected cell

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 		<script src = "circuitry/js/circuitry.utilities.js"></script>
 		<script src = "circuitry/js/circuitry.js"></script>
+		<script src = "circuitry/js/circuitry.grid.js"></script>
 
 		<script src = "index.js"></script>
 	</head>
