Implement simple window

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 		<script src = "js/lib/pixi.min.js"></script>
 
 		<script src = "circuitry/js/circuitry.utilities.js"></script>
+		<script src = "circuitry/js/circuitry.events.js"></script>
 		<script src = "circuitry/js/circuitry.js"></script>
 		<script src = "circuitry/js/circuitry.grid.js"></script>
+		<script src = "circuitry/js/circuitry.window.js"></script>
 
 		<script src = "index.js"></script>
 	</head>
