--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<script src = "js/lib/pixi.min.js"></script>
 
 		<script src = "circuitry/js/circuitry.utilities.js"></script>
+		<script src = "circuitry/js/circuitry.lerp.js"></script>
 		<script src = "circuitry/js/circuitry.events.js"></script>
 		<script src = "circuitry/js/circuitry.js"></script>
 		<script src = "circuitry/js/circuitry.grid.js"></script>
