Circuitry component test

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 		<script src = "js/lib/jquery-2.1.4.min.js"></script>
 		<script src = "js/lib/pixi.min.js"></script>
 
+		<script src = "circuitry/js/circuitry.polyfills.js"></script>
 		<script src = "circuitry/js/circuitry.utilities.js"></script>
 		<script src = "circuitry/js/circuitry.lerp.js"></script>
 		<script src = "circuitry/js/circuitry.events.js"></script>
 		<script src = "circuitry/js/circuitry.js"></script>
 		<script src = "circuitry/js/circuitry.grid.js"></script>
 		<script src = "circuitry/js/circuitry.window.js"></script>
+		<script src = "circuitry/js/circuitry.componentdefinition.js"></script>
+		<script src = "circuitry/js/circuitry.component.js"></script>
 
 		<script src = "index.js"></script>
 	</head>
